@@ -53,8 +53,9 @@ case "${1}" in
 		# the kernel call out to any binary in response to them
 		echo > /proc/sys/kernel/hotplug
 
-		# Copy static device nodes to /dev
-		cp -a /lib/udev/devices/* /dev
+		# Copy the only static device node that Udev >= 155 doesn't
+		# handle to /dev
+		cp -a /lib/udev/devices/null /dev
 
 		# Start the udev daemon to continually watch for, and act on,
 		# uevents
