@@ -40,6 +40,10 @@
       <para>2010-05-29</para>
       <itemizedlist>
          <listitem>
+           <para>[matthew] - Upgrade to Udev-156.  Fixes
+           <ulink url="&lfs-ticket-root;2671">#2671</ulink>.</para>
+         </listitem>
+         <listitem>
            <para>[matthew] - Upgrade to Pkg-config-0.25.  Fixes
            <ulink url="&lfs-ticket-root;2670">#2670</ulink>.</para>
          </listitem>
