@@ -50,12 +50,7 @@
     them being required very early in the boot process, or by Udev itself:</para>
 
 <screen><userinput remap="install">install -dv /lib/{firmware,udev/devices/{pts,shm}}
-mknod -m0666 /lib/udev/devices/null c 1 3
-ln -sv /proc/self/fd /lib/udev/devices/fd
-ln -sv /proc/self/fd/0 /lib/udev/devices/stdin
-ln -sv /proc/self/fd/1 /lib/udev/devices/stdout
-ln -sv /proc/self/fd/2 /lib/udev/devices/stderr
-ln -sv /proc/kcore /lib/udev/devices/core</userinput></screen>
+mknod -m0666 /lib/udev/devices/null c 1 3</userinput></screen>
 
     <para>Prepare the package for compilation:</para>
 
