@@ -1,3 +1,8 @@
+2010-05-29	Matt Burgess <matthew@linuxfromscratch.org>
+   * lfs/init.d/udev: Only copy /lib/udev/devices/null, as Udev >= 155 copies
+     devices from /lib/udev/devices to /dev itself.  Udevd still needs /dev/null
+     present before starting up though.
+
 2010-04-20	Bryan Kadzban <bryan@linuxfromscratch.org>
    * lfs/init.d/udev, lfs/init.d/udev_retry: Add --action=add, to handle udev
    version 152 and newer, which send "change" events by default in udevtrigger
